Fixed z-index
Set z-index to be above search suggestions box (10 -> 1)

--- a/userChrome.css
+++ b/userChrome.css
@@ -157,7 +157,7 @@
     min-width: 10vw !important;
     width: 30vw !important;
     max-width: 200px !important;
-    z-index: 10 !important;
+    z-index: 1 !important;
 }
 
 @media (width >= 1200px) {
